test/out/script/jit.lean.expected.out
101
3

out/script/jit.lean:20:0-20:10: error: Module has no main function
Hello World!
0
